--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,9 @@
     "thread": "cpp",
     "cinttypes": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "charconv": "cpp",
+    "complex": "cpp",
+    "format": "cpp"
   }
 }
